CHANGELOG for mod.cservice

22/1/2001 ULtimaTe_
Added WELCOME message onjoin
db needs next field:
	ALTER TABLE channels ADD COLUMN welcome VARCHAR(255);

23/1/2001 ULtimaTe_
Added COMMENT command like CSC requested it.
db update:
	ALTER TABLE users ADD COLUMN comment VARCHAR(300);