@@ -18,7 +18,7 @@
  *
  * Caveats: None.
  *
- * $Id: BANCommand.cc,v 1.1 2002-01-14 23:14:15 morpheus Exp $
+ * $Id: BANCommand.cc,v 1.2 2002-01-23 17:17:23 ultimate Exp $
  */
 
 #include	<new>
@@ -33,7 +33,7 @@
 #include	"responses.h"
 #include	"match.h"
 
-const char BANCommand_cc_rcsId[] = "$Id: BANCommand.cc,v 1.1 2002-01-14 23:14:15 morpheus Exp $" ;
+const char BANCommand_cc_rcsId[] = "$Id: BANCommand.cc,v 1.2 2002-01-23 17:17:23 ultimate Exp $" ;
 
 namespace gnuworld
 {
@@ -81,6 +81,15 @@ if(!theChan)
 	return false;
 	}
 
+
+#ifdef FEATURE_FORCELOG
+unsigned short forcedAccess = bot->isForced(theChan, theUser);
+if (forcedAccess <= 900  && forcedAccess > 0)
+        {
+        bot->writeForceLog(theUser, theChan, Message);
+        }
+
+#endif
 
 /* Check the bot is in the channel. */
 
