@@ -10,7 +10,7 @@
  *
  * Todo: Support ircu2.10.11's CLEARMODE feature.
  *
- * $Id: CLEARMODECommand.cc,v 1.1 2002-01-14 23:14:16 morpheus Exp $
+ * $Id: CLEARMODECommand.cc,v 1.2 2002-01-23 17:17:23 ultimate Exp $
  */
 
 #include	<string>
@@ -21,7 +21,7 @@
 #include	"responses.h"
 #include	"Network.h"
 
-const char CLEARMODECommand_cc_rcsId[] = "$Id: CLEARMODECommand.cc,v 1.1 2002-01-14 23:14:16 morpheus Exp $" ;
+const char CLEARMODECommand_cc_rcsId[] = "$Id: CLEARMODECommand.cc,v 1.2 2002-01-23 17:17:23 ultimate Exp $" ;
 
 namespace gnuworld
 {
@@ -52,6 +52,15 @@ if(!theChan)
 		st[1].c_str());
 	return false;
 	}
+
+#ifdef FEATURE_FORCELOG
+unsigned short forcedAccess = bot->isForced(theChan, theUser);
+if (forcedAccess <= 900  && forcedAccess > 0)
+        {
+        bot->writeForceLog(theUser, theChan, Message);
+        }
+
+#endif
 
 /* Check the bot is in the channel. */
 
