@@ -8,7 +8,7 @@
  *
  * Caveats: None
  *
- * $Id: INVITECommand.cc,v 1.1 2002-01-14 23:14:17 morpheus Exp $
+ * $Id: INVITECommand.cc,v 1.2 2002-01-23 17:17:24 ultimate Exp $
  */
 
 
@@ -21,7 +21,7 @@
 #include	"responses.h"
 #include	"Network.h"
 
-const char INVITECommand_cc_rcsId[] = "$Id: INVITECommand.cc,v 1.1 2002-01-14 23:14:17 morpheus Exp $" ;
+const char INVITECommand_cc_rcsId[] = "$Id: INVITECommand.cc,v 1.2 2002-01-23 17:17:24 ultimate Exp $" ;
 
 namespace gnuworld
 {
@@ -58,6 +58,15 @@ bool INVITECommand::Exec( iClient* theClient, const string& Message )
 			st[1].c_str());
 		return false;
 	}
+
+#ifdef FEATURE_FORCELOG
+	unsigned short forcedAccess = bot->isForced(theChan, theUser);
+	if (forcedAccess <= 900  && forcedAccess > 0)
+        	{
+	        bot->writeForceLog(theUser, theChan, Message);
+        	}
+
+#endif
 
  	/* Check the bot is in the channel. */
 
