@@ -7,7 +7,7 @@
  * Suspends an user on the specified channel, if suspend duration 0
  * is defined, the user will be unsuspended.
  *
- * $Id: SUSPENDCommand.cc,v 1.1 2002-01-14 23:14:22 morpheus Exp $
+ * $Id: SUSPENDCommand.cc,v 1.2 2002-01-23 17:17:25 ultimate Exp $
  */
 
 #include	<string>
@@ -21,7 +21,7 @@
 #include	"levels.h"
 #include	"responses.h"
 
-const char SUSPENDCommand_cc_rcsId[] = "$Id: SUSPENDCommand.cc,v 1.1 2002-01-14 23:14:22 morpheus Exp $" ;
+const char SUSPENDCommand_cc_rcsId[] = "$Id: SUSPENDCommand.cc,v 1.2 2002-01-23 17:17:25 ultimate Exp $" ;
 
 namespace gnuworld
 {
@@ -127,6 +127,15 @@ if(!theChan)
 		st[1].c_str());
 	return false;
 	}
+
+#ifdef FEATURE_FORCELOG
+unsigned short forcedAccess = bot->isForced(theChan, theUser);
+if (forcedAccess <= 900  && forcedAccess > 0)
+        {
+        bot->writeForceLog(theUser, theChan, Message);
+        }
+
+#endif
 
 /* Check level. */
 int level = bot->getEffectiveAccessLevel(theUser, theChan, true);
