@@ -8,7 +8,7 @@
  *
  * Caveats: None.
  *
- * $Id: UNSUSPENDCommand.cc,v 1.1 2002-01-14 23:14:22 morpheus Exp $
+ * $Id: UNSUSPENDCommand.cc,v 1.2 2002-01-23 17:17:25 ultimate Exp $
  */
 
 #include	<string>
@@ -20,7 +20,7 @@
 #include	"levels.h"
 #include	"responses.h"
 
-const char UNSUSPENDCommand_cc_rcsId[] = "$Id: UNSUSPENDCommand.cc,v 1.1 2002-01-14 23:14:22 morpheus Exp $" ;
+const char UNSUSPENDCommand_cc_rcsId[] = "$Id: UNSUSPENDCommand.cc,v 1.2 2002-01-23 17:17:25 ultimate Exp $" ;
 
 namespace gnuworld
 {
@@ -120,6 +120,15 @@ if(!theChan)
 		st[1].c_str());
 	return false;
 	}
+
+#ifdef FEATURE_FORCELOG
+unsigned short forcedAccess = bot->isForced(theChan, theUser);
+if (forcedAccess <= 900  && forcedAccess > 0)
+        {
+        bot->writeForceLog(theUser, theChan, Message);
+        }
+
+#endif
 
 // Check level.
 int level = bot->getEffectiveAccessLevel(theUser, theChan, true);
