@@ -1,7 +1,7 @@
 /* cservice_config.h */
 
 #ifndef __CSERVICE_CONFIG_H
-#define __CSERVICE_CONFIG_H "$Id: cservice_config.h,v 1.3 2002-01-16 23:24:16 morpheus Exp $"
+#define __CSERVICE_CONFIG_H "$Id: cservice_config.h,v 1.4 2002-01-23 17:17:26 ultimate Exp $"
 
 /**
  * Define this if you wish for all SQL queries to be sent
@@ -46,5 +46,7 @@
 #define FEATURE_NOFORCE
 
 #define FEATURE_MEMOSERV
+
+#define FEATURE_FORCELOG
 
 #endif // __CSERVICE_CONFIG_H
